--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cheerio": ">=0.19.0",
     "gramophone": ">=0.0.3",
     "request": ">=2.42.0",
-    "languagedetect": ">=1.1.1"
+    "languagedetect": ">=1.1.1",
+    "fs-extra": ">=0.20.0"
   },
   "license": "BSD-2-Clause",
   "bugs": {
